# AI-HR-Agent

./: README.md
cv-review-agent--main/backend/: README.md  credentials.json  cv_auto_processor.py  main.py  requirements.txt  start_cv_processor.bat  token.pickle
cv-review-agent--main/backend/agent/: __init__.py  chat_agent.py  gmail_agent.py
cv-review-agent--main/backend/cv_collection/: .processed_message_ids.txt  20251226_204855_kaveen_c_deshapriya_ATS_Analysis.json  JACQUELINE THOMPSON_ATS_Analysis.json  Rachelle Beaudry_ATS_Analysis.json  cv_senders_log.csv
cv-review-agent--main/backend/routes/: api.py
cv-review-agent--main/frontend/: .env  CHECKLIST.md  README.md  package-lock.json  package.json  tailwind.config.js
db/: hr_management_db.sql
face-recognition-main/: README.md
face-recognition-main/backend/: add_location_columns.sql  main.py  requirements.txt  test_webcam.html
face-recognition-main/frontend/: pubspec.yaml
leave-management-agent-main/backend/: .env.example  .gitignore  FEATURES.md  QUICKSTART.md  README.md  add_employee.py  api_server.py  check_balance.py  main.py  pyproject.toml  requirements.txt  start_servers.bat  start_servers.sh  start_with_uv.bat  test_leave_request.py
leave-management-agent-main/backend/agent/: database.py  email_reader.py  email_sender.py  graph.py  hr_listener.py  policy_engine.py  prompts.py  state.py  utils.py
leave-management-agent-main/backend/data/: policies.json  processed_emails.json
leave-management-agent-main/frontend/: README.md  package-lock.json  package.json
(+51 files in other folders)
